# ddc-light

./: .gitignore  CMakeLists.txt  ddc.c  ddc.h  main.c  readme.adoc
